# Corner-League-Bot

./: .env.example  .gitignore  LICENSE_HEADER.txt  README.md  add_search_indexes.py  check_db_performance.py  check_nba_teams.py  check_sports.py  check_sports_simple.py  check_users.py  clear_test_data.py  clerk_auth_implementation_plan.md  create_tables.sql  debug_env.py  debug_filtering.py  debug_sport_validation.py  init_db.py  package.json  pyproject.toml  seed_data.sql  seed_test_data.py  test_auth_fix.py  test_crawler.py  test_crawler_fresh.py  test_db_connection.py  test_dodgers_filtering.py  test_frontend_auth.py  test_rss_direct.py  test_rss_only.py  test_sports_api.py  test_updated_crawler.py  test_uuid_comparison.py
apps/api/: __init__.py  auth_routes.py  main.py  questionnaire_routes.py
apps/workers/: __init__.py  crawler_worker.py
docs/deployment/: production-guide.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/client/: index.html
frontend/client/src/: App.tsx  index.css
frontend/client/src/components/auth/: AuthButton.tsx  FavoriteTeamSelector.tsx  ProtectedRoute.tsx  UserProfile.tsx  index.ts
frontend/client/src/components/ui/: button.tsx  toaster.tsx
frontend/client/src/hooks/: use-toast.ts  useApi.ts  useQuestionnaire.ts  useSportsData.ts
frontend/client/src/pages/: home.tsx  profile.tsx  questionnaire.tsx  sign-in.tsx  sign-up.tsx
frontend/client/src/types/: api.ts
frontend/server/: routes.ts  vite.ts
infra/docker/postgres/: init.sql
libs/ai/: __init__.py  summarizer.py
libs/api/: mappers.py  response.py
libs/auth/: __init__.py  clerk_config.py  decorators.py  middleware.py  user_service.py
libs/common/: __init__.py  config.py  database.py  questionnaire_models.py  test_user_config.py
libs/ingestion/: __init__.py  crawler.py  extractor.py
libs/quality/: __init__.py  scorer.py
libs/search/: __init__.py  engine.py  trending.py
migrations/: create_questionnaire_tables.sql
scripts/: run_migration.py  seed_comprehensive_teams_data.py  seed_database.py  seed_sports_data.py  setup.sh
tests/: __init__.py  conftest.py  test_api_integration.py  test_auth_integration.py  test_chaos_engineering.py  test_crawler_integration.py  test_golden_corpus.py  test_rss_integration.py
tests/unit/: test_jwks_concurrency.py  test_questionnaire_routes.py
